--- a/_posts/core-samples/2013-11-28-2013-Albums.md
+++ b/_posts/core-samples/2013-11-28-2013-Albums.md
@@ -8,26 +8,44 @@ tags : [music]
 
 ## 2013 Albums
 
-ost:
+1.ost:
+
 Gustavo Santaolalla - The Last of Us
+
 Ramin Djawadi - Pacific Rim (Original Motion Picture Soundtrack)
 
-pure：
+2.pure：
+
 E.S. Posthumus
+
 The Piano Guys
+
 Bryson Andres
 
-pop:
+3.pop:
+
 Avicii - True
+
 Bastille - Bad Blood
+
 Fall Out Boy - Save Rock And Roll
+
 Placebo - Loud Like Love
+
 Daft Punk - Random Access Memories
+
 Kodaline - In A Perfect World
+
 Rudimental - Home
+
 OneRepublic - Native
+
 The Script - #3
+
 Imagine Dragons - Night Visions
+
 Macklemore - The Heist
+
 http://www.xiami.com/album/1866637709
+
 mark下
