--- a/_posts/2014-04-21-Vol1.md
+++ b/_posts/2014-04-21-Vol1.md
@@ -2,7 +2,7 @@
 layout: post
 title: Vol.1
 ---
-<audio src="http://mr4.douban.com/201404211443/3c033f689d9529c10e4a17cae510bb70/view/musicianmp3/mp3/x15011301.mp3" controls="controls">
+<audio src="http://m1.file.xiami.com/334/48334/274771/3095906_1704497_l.mp3" controls="controls">
 Your browser does not support the audio element.
 </audio>
 ---
