--- a/_posts/2014-04-21-Vol1.md
+++ b/_posts/2014-04-21-Vol1.md
@@ -2,7 +2,5 @@
 layout: post
 title: Vol.1
 ---
-<audio src="http://m1.file.xiami.com/334/48334/274771/3095906_1704497_l.mp3" controls="controls">
-Your browser does not support the audio element.
-</audio>
+<iframe src="http://music.douban.com/artists/player/?sid=403514" frameborder="0" border="0" ></iframe>
 ---
