--- a/_posts/2014-04-21-Vol1.md
+++ b/_posts/2014-04-21-Vol1.md
@@ -3,10 +3,9 @@ layout: post
 title: Vol.1
 ---
 <!-- <iframe src="http://music.douban.com/artists/player/?sid=403514" frameborder="0" border="0" style="display:none;"></iframe> -->
-<object width="261" height="30">
-      <param value="http://site.douban.com/swf/player53015.swf?url=http://mr3.douban.com/201404211522/67bd8d0d91a6a7fea688da4dab1de66e/view/musicianmp3/mp3/x15087155.mp3&amp;autoplay=0&amp;songid=&amp;isdemo=True" name="movie">
-      <param value="always" name="allowScriptAccess">
-      <embed wmode="transparent" type="application/x-shockwave-flash" src="http://site.douban.com/swf/player53015.swf?url=http://mr3.douban.com/201404211522/67bd8d0d91a6a7fea688da4dab1de66e/view/musicianmp3/mp3/x15087155.mp3&amp;autoplay=0&amp;songid=&amp;isdemo=True" width="261" height="30"></object>
+<embed allowscriptaccess="never" allownetworking="internal" invokeurls="false" src="http://site.douban.com/swf/player53015.swf?url=http://mr3.douban.com/201404211522/67bd8d0d91a6a7fea688da4dab1de66e/view/musicianmp3/mp3/x15087155.mp3&autoplay=0&songid=&isdemo=True" 
+pluginspage="http://www.macromedia.com/go/getflashplayer" type="application/x-shockwave-flash" quality="high" autostart="0" wmode="transparent" width="100%" 
+height="300" align="middle">
 ---
 　　为何在岁月里，我们都渐渐有了秋雨梧桐，空阶到明的伤心，却总是在故事里，才舍得去相信了爱的坚贞。 
 
