--- a/_posts/2014-04-21-Vol1.md
+++ b/_posts/2014-04-21-Vol1.md
@@ -2,7 +2,7 @@
 layout: post
 title: Vol.1
 ---
-<embed src="http://site.douban.com/swf/player53015.swf?url=http://mr4.douban.com/201404211554/4f4a5387649e088ef6726fc1e3da0fdd/view/musicianmp3/mp3/x15011301.mp3&autoplay=0&songid=&isdemo=True" allowFullScreen="true" quality="high" width="261" height="30" align="middle" allowScriptAccess="always" type="application/x-shockwave-flash"></embed>
+<audio src="http://mr4.douban.com/201410081621/c8a73761a14b7b05df66eedd226dfc33/view/musicianmp3/mp3/x15011301.mp3" controls="controls" autoplay="autoplay">浏览器不支持！</audio>
 ---
 　　为何在岁月里，我们都渐渐有了秋雨梧桐，空阶到明的伤心，却总是在故事里，才舍得去相信了爱的坚贞。 
 
