--- a/_posts/2014-04-21-Vol1.md
+++ b/_posts/2014-04-21-Vol1.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Vol.1
+title: 如梦坐南山 - 萤火之森 Vol.1
 ---
 <audio src="/music/x15011301.mp3" controls="controls" autoplay="autoplay">浏览器不支持！</audio>
 ---
