modify vol1 cover

--- a/_posts/2014-04-21-Vol1.md
+++ b/_posts/2014-04-21-Vol1.md
@@ -4,6 +4,8 @@ title: 如梦坐南山 - 萤火之森 Vol.1
 ---
 <audio src="/music/x15011301.mp3" controls="controls" autoplay="autoplay">浏览器不支持！</audio>
 ---
+![cover](http://ww4.sinaimg.cn/large/536efc01jw1em24y5fwd3j20bn0go414.jpg)
+
 　　为何在岁月里，我们都渐渐有了秋雨梧桐，空阶到明的伤心，却总是在故事里，才舍得去相信了爱的坚贞。 
 
 　　从蜂四里一句烟花轰然的我喜欢你呢阿久，到少女的泪眼里听闻了一句我在未来等你。然后的然后，白绸系了两端无法相牵的手，所有的悲伤已昭然欲揭。而那个粉蝶停留过的狐狸面具背后，他在一山如昼的灯火里拖长了尾音纵容着说，就是约会啊。
