modify vol1 cover

--- a/_posts/2014-04-21-Vol1.md
+++ b/_posts/2014-04-21-Vol1.md
@@ -2,9 +2,9 @@
 layout: post
 title: 如梦坐南山 - 萤火之森 Vol.1
 ---
-<audio src="/music/x15011301.mp3" controls="controls" autoplay="autoplay">浏览器不支持！</audio>
+<p style="text-align:center;"><img src="http://ww4.sinaimg.cn/large/536efc01jw1em24y5fwd3j20bn0go414.jpg" alt=""></p>
+<p style="text-align:center;"><audio src="/music/x15011301.mp3" controls="controls" autoplay="autoplay">浏览器不支持！</audio></p>
 ---
-![cover](http://ww4.sinaimg.cn/large/536efc01jw1em24y5fwd3j20bn0go414.jpg)
 
 　　为何在岁月里，我们都渐渐有了秋雨梧桐，空阶到明的伤心，却总是在故事里，才舍得去相信了爱的坚贞。 
 
