--- a/_posts/2013-11-28-2013-Albums.md
+++ b/_posts/2013-11-28-2013-Albums.md
@@ -54,7 +54,7 @@ title: 2013个人专辑推荐！2013 ALBUMS AWSOME MIX!
 <font color="#000"><font face="Arial"><font style="font-size:13px">29. The Path (A New Beginning) (2:46)</font></font></font><br>
 <font color="#000"><font face="Arial"><font style="font-size:13px">30. Returning (3:35)</font></font></font><br>
 <br>
-<span id="swf_t9l"><embed width="257" height="33" allownetworking="internal" allowscriptaccess="never" src="http://www.xiami.com/widget/828935_1771865615/singlePlayer.swf" quality="high" bgcolor="#ffffff" wmode="transparent" allowfullscreen="true" type="application/x-shockwave-flash"></span><script type="text/javascript" reload="1">$('swf_t9l').innerHTML=AC_FL_RunContent('width', '257', 'height', '33', 'allowNetworking', 'internal', 'allowScriptAccess', 'never', 'src', encodeURI('http://www.xiami.com/widget/828935_1771865615/singlePlayer.swf'), 'quality', 'high', 'bgcolor', '#ffffff', 'wmode', 'transparent', 'allowfullscreen', 'true');</script><br>
+<span id="swf_t9l"><embed width="257" height="33" allownetworking="internal" allowscriptaccess="never" src="http://www.xiami.com/widget/828935_1771865615/singlePlayer.swf" quality="high" bgcolor="#ffffff" wmode="transparent" allowfullscreen="true" type="application/x-shockwave-flash"></span>
 <br>
 <hr class="l"><img src="http://zhixing.bjtu.edu.cn/static/image/hrline/5.gif" width="272" height="23"><img src="http://zhixing.bjtu.edu.cn/static/image/hrline/5.gif" width="272" height="23">
 <br>
@@ -91,7 +91,7 @@ title: 2013个人专辑推荐！2013 ALBUMS AWSOME MIX!
 <font color="#000"><font face="Helvetica"><font style="font-size:13px">25. We Need a New Weapon (1:41)</font></font></font><br>
 <font color="#000"><font face="Helvetica"><font style="font-size:13px"><br>
 </font></font></font><br>
-<span id="swf_R2z"><embed width="257" height="33" allownetworking="internal" allowscriptaccess="never" src="http://www.xiami.com/widget/828935_1771959699/singlePlayer.swf" quality="high" bgcolor="#ffffff" wmode="transparent" allowfullscreen="true" type="application/x-shockwave-flash"></span><script type="text/javascript" reload="1">$('swf_R2z').innerHTML=AC_FL_RunContent('width', '257', 'height', '33', 'allowNetworking', 'internal', 'allowScriptAccess', 'never', 'src', encodeURI('http://www.xiami.com/widget/828935_1771959699/singlePlayer.swf'), 'quality', 'high', 'bgcolor', '#ffffff', 'wmode', 'transparent', 'allowfullscreen', 'true');</script><br>
+<span id="swf_R2z"><embed width="257" height="33" allownetworking="internal" allowscriptaccess="never" src="http://www.xiami.com/widget/828935_1771959699/singlePlayer.swf" quality="high" bgcolor="#ffffff" wmode="transparent" allowfullscreen="true" type="application/x-shockwave-flash"></span>
 <br>
 <hr class="l"><img src="http://zhixing.bjtu.edu.cn/static/image/hrline/5.gif" width="272" height="23"><img src="http://zhixing.bjtu.edu.cn/static/image/hrline/5.gif" width="272" height="23">
 <br>
@@ -119,7 +119,7 @@ title: 2013个人专辑推荐！2013 ALBUMS AWSOME MIX!
 <font face="Helvetica"><font style="font-size:13px"><strong><font color="#ff0000">16. Gravity (4:35)</font></strong></font></font><br>
 <font style="color:rgb(0, 0, 0)"><font face="Helvetica"><font style="font-size:13px"><br>
 </font></font></font><br>
-<span id="swf_xwI"><embed width="257" height="33" allownetworking="internal" allowscriptaccess="never" src="http://www.xiami.com/widget/828935_1772188564/singlePlayer.swf" quality="high" bgcolor="#ffffff" wmode="transparent" allowfullscreen="true" type="application/x-shockwave-flash"></span><script type="text/javascript" reload="1">$('swf_xwI').innerHTML=AC_FL_RunContent('width', '257', 'height', '33', 'allowNetworking', 'internal', 'allowScriptAccess', 'never', 'src', encodeURI('http://www.xiami.com/widget/828935_1772188564/singlePlayer.swf'), 'quality', 'high', 'bgcolor', '#ffffff', 'wmode', 'transparent', 'allowfullscreen', 'true');</script><br>
+<span id="swf_xwI"><embed width="257" height="33" allownetworking="internal" allowscriptaccess="never" src="http://www.xiami.com/widget/828935_1772188564/singlePlayer.swf" quality="high" bgcolor="#ffffff" wmode="transparent" allowfullscreen="true" type="application/x-shockwave-flash"></span>
 <br>
 <hr class="l"><img src="http://zhixing.bjtu.edu.cn/static/image/hrline/5.gif" width="272" height="23"><img src="http://zhixing.bjtu.edu.cn/static/image/hrline/5.gif" width="272" height="23">
 <br>
@@ -140,7 +140,7 @@ title: 2013个人专辑推荐！2013 ALBUMS AWSOME MIX!
 <font face="Helvetica"><font size="2"><font color="#000000">09.Hope There’s Someone</font></font></font><br>
 <font face="Helvetica"><font size="2"><font color="#000000">10.Heart Upon My Sleeve</font></font></font><br>
 <br>
-<span id="swf_AX2"><embed width="257" height="33" allownetworking="internal" allowscriptaccess="never" src="http://www.xiami.com/widget/828935_1771948942/singlePlayer.swf" quality="high" bgcolor="#ffffff" wmode="transparent" allowfullscreen="true" type="application/x-shockwave-flash"></span><script type="text/javascript" reload="1">$('swf_AX2').innerHTML=AC_FL_RunContent('width', '257', 'height', '33', 'allowNetworking', 'internal', 'allowScriptAccess', 'never', 'src', encodeURI('http://www.xiami.com/widget/828935_1771948942/singlePlayer.swf'), 'quality', 'high', 'bgcolor', '#ffffff', 'wmode', 'transparent', 'allowfullscreen', 'true');</script><br>
+<span id="swf_AX2"><embed width="257" height="33" allownetworking="internal" allowscriptaccess="never" src="http://www.xiami.com/widget/828935_1771948942/singlePlayer.swf" quality="high" bgcolor="#ffffff" wmode="transparent" allowfullscreen="true" type="application/x-shockwave-flash"></span>
 <br>
 <hr class="l"><img src="http://zhixing.bjtu.edu.cn/static/image/hrline/5.gif" width="272" height="23"><img src="http://zhixing.bjtu.edu.cn/static/image/hrline/5.gif" width="272" height="23">
 <br>
@@ -164,7 +164,7 @@ title: 2013个人专辑推荐！2013 ALBUMS AWSOME MIX!
 11.Laura Palmer<br>
 12.Get Home<br>
 <br>
-<span id="swf_L3B"><embed width="257" height="33" allownetworking="internal" allowscriptaccess="never" src="http://www.xiami.com/widget/828935_1771528829/singlePlayer.swf" quality="high" bgcolor="#ffffff" wmode="transparent" allowfullscreen="true" type="application/x-shockwave-flash"></span><script type="text/javascript" reload="1">$('swf_L3B').innerHTML=AC_FL_RunContent('width', '257', 'height', '33', 'allowNetworking', 'internal', 'allowScriptAccess', 'never', 'src', encodeURI('http://www.xiami.com/widget/828935_1771528829/singlePlayer.swf'), 'quality', 'high', 'bgcolor', '#ffffff', 'wmode', 'transparent', 'allowfullscreen', 'true');</script><br>
+<span id="swf_L3B"><embed width="257" height="33" allownetworking="internal" allowscriptaccess="never" src="http://www.xiami.com/widget/828935_1771528829/singlePlayer.swf" quality="high" bgcolor="#ffffff" wmode="transparent" allowfullscreen="true" type="application/x-shockwave-flash"></span>
 <br>
 <br>
 <hr class="l"><img src="http://zhixing.bjtu.edu.cn/static/image/hrline/5.gif" width="272" height="23"><img src="http://zhixing.bjtu.edu.cn/static/image/hrline/5.gif" width="272" height="23">
@@ -187,7 +187,7 @@ title: 2013个人专辑推荐！2013 ALBUMS AWSOME MIX!
 10. Rat A Tat (Feat. Courtney Love)<br>
 11. Save Rock And Roll (Feat. Elton John)<br>
 <br>
-<span id="swf_ym7"><embed width="257" height="33" allownetworking="internal" allowscriptaccess="never" src="http://www.xiami.com/widget/828935_1771660494/singlePlayer.swf" quality="high" bgcolor="#ffffff" wmode="transparent" allowfullscreen="true" type="application/x-shockwave-flash"></span><script type="text/javascript" reload="1">$('swf_ym7').innerHTML=AC_FL_RunContent('width', '257', 'height', '33', 'allowNetworking', 'internal', 'allowScriptAccess', 'never', 'src', encodeURI('http://www.xiami.com/widget/828935_1771660494/singlePlayer.swf'), 'quality', 'high', 'bgcolor', '#ffffff', 'wmode', 'transparent', 'allowfullscreen', 'true');</script><br>
+<span id="swf_ym7"><embed width="257" height="33" allownetworking="internal" allowscriptaccess="never" src="http://www.xiami.com/widget/828935_1771660494/singlePlayer.swf" quality="high" bgcolor="#ffffff" wmode="transparent" allowfullscreen="true" type="application/x-shockwave-flash"></span>
 <br>
 <hr class="l"><img src="http://zhixing.bjtu.edu.cn/static/image/hrline/5.gif" width="272" height="23"><img src="http://zhixing.bjtu.edu.cn/static/image/hrline/5.gif" width="272" height="23">
 <br>
@@ -208,7 +208,7 @@ title: 2013个人专辑推荐！2013 ALBUMS AWSOME MIX!
 09. Begin The End<br>
 10. Bosco<br>
 <br>
-<span id="swf_Qq4"><embed width="257" height="33" allownetworking="internal" allowscriptaccess="never" src="http://www.xiami.com/widget/828935_1771971123/singlePlayer.swf" quality="high" bgcolor="#ffffff" wmode="transparent" allowfullscreen="true" type="application/x-shockwave-flash"></span><script type="text/javascript" reload="1">$('swf_Qq4').innerHTML=AC_FL_RunContent('width', '257', 'height', '33', 'allowNetworking', 'internal', 'allowScriptAccess', 'never', 'src', encodeURI('http://www.xiami.com/widget/828935_1771971123/singlePlayer.swf'), 'quality', 'high', 'bgcolor', '#ffffff', 'wmode', 'transparent', 'allowfullscreen', 'true');</script><br>
+<span id="swf_Qq4"><embed width="257" height="33" allownetworking="internal" allowscriptaccess="never" src="http://www.xiami.com/widget/828935_1771971123/singlePlayer.swf" quality="high" bgcolor="#ffffff" wmode="transparent" allowfullscreen="true" type="application/x-shockwave-flash"></span>
 <br>
 <hr class="l"><img src="http://zhixing.bjtu.edu.cn/static/image/hrline/5.gif" width="272" height="23"><img src="http://zhixing.bjtu.edu.cn/static/image/hrline/5.gif" width="272" height="23">
 <br>
@@ -232,7 +232,7 @@ title: 2013个人专辑推荐！2013 ALBUMS AWSOME MIX!
 12.Doin' It Right (feat. Panda Bear)<br>
 13.Contact (feat. DJ Falcon)<br>
 <br>
-<span id="swf_ZL6"><embed width="257" height="33" allownetworking="internal" allowscriptaccess="never" src="http://www.xiami.com/widget/828935_1771816764/singlePlayer.swf" quality="high" bgcolor="#ffffff" wmode="transparent" allowfullscreen="true" type="application/x-shockwave-flash"></span><script type="text/javascript" reload="1">$('swf_ZL6').innerHTML=AC_FL_RunContent('width', '257', 'height', '33', 'allowNetworking', 'internal', 'allowScriptAccess', 'never', 'src', encodeURI('http://www.xiami.com/widget/828935_1771816764/singlePlayer.swf'), 'quality', 'high', 'bgcolor', '#ffffff', 'wmode', 'transparent', 'allowfullscreen', 'true');</script><br>
+<span id="swf_ZL6"><embed width="257" height="33" allownetworking="internal" allowscriptaccess="never" src="http://www.xiami.com/widget/828935_1771816764/singlePlayer.swf" quality="high" bgcolor="#ffffff" wmode="transparent" allowfullscreen="true" type="application/x-shockwave-flash"></span>
 <br>
 <hr class="l"><img src="http://zhixing.bjtu.edu.cn/static/image/hrline/5.gif" width="272" height="23"><img src="http://zhixing.bjtu.edu.cn/static/image/hrline/5.gif" width="272" height="23">
 <br>
@@ -254,7 +254,7 @@ title: 2013个人专辑推荐！2013 ALBUMS AWSOME MIX!
 10. Pray<br>
 11. Way Back When<br>
 <br>
-<span id="swf_rYd"><embed width="257" height="33" allownetworking="internal" allowscriptaccess="never" src="http://www.xiami.com/widget/828935_1771574028/singlePlayer.swf" quality="high" bgcolor="#ffffff" wmode="transparent" allowfullscreen="true" type="application/x-shockwave-flash"></span><script type="text/javascript" reload="1">$('swf_rYd').innerHTML=AC_FL_RunContent('width', '257', 'height', '33', 'allowNetworking', 'internal', 'allowScriptAccess', 'never', 'src', encodeURI('http://www.xiami.com/widget/828935_1771574028/singlePlayer.swf'), 'quality', 'high', 'bgcolor', '#ffffff', 'wmode', 'transparent', 'allowfullscreen', 'true');</script><br>
+<span id="swf_rYd"><embed width="257" height="33" allownetworking="internal" allowscriptaccess="never" src="http://www.xiami.com/widget/828935_1771574028/singlePlayer.swf" quality="high" bgcolor="#ffffff" wmode="transparent" allowfullscreen="true" type="application/x-shockwave-flash"></span>
 <br>
 <hr class="l"><img src="http://zhixing.bjtu.edu.cn/static/image/hrline/5.gif" width="272" height="23"><img src="http://zhixing.bjtu.edu.cn/static/image/hrline/5.gif" width="272" height="23">
 <br>
@@ -281,7 +281,7 @@ title: 2013个人专辑推荐！2013 ALBUMS AWSOME MIX!
 15.Solo (Feat. Ella Eyre &amp; Mark Crown)<br>
 16.Feel The Love (Rudimental Vip) (Feat. John Newman)<br>
 <br>
-<span id="swf_Saq"><embed width="257" height="33" allownetworking="internal" allowscriptaccess="never" src="http://www.xiami.com/widget/828935_1771841046/singlePlayer.swf" quality="high" bgcolor="#ffffff" wmode="transparent" allowfullscreen="true" type="application/x-shockwave-flash"></span><script type="text/javascript" reload="1">$('swf_Saq').innerHTML=AC_FL_RunContent('width', '257', 'height', '33', 'allowNetworking', 'internal', 'allowScriptAccess', 'never', 'src', encodeURI('http://www.xiami.com/widget/828935_1771841046/singlePlayer.swf'), 'quality', 'high', 'bgcolor', '#ffffff', 'wmode', 'transparent', 'allowfullscreen', 'true');</script><br>
+<span id="swf_Saq"><embed width="257" height="33" allownetworking="internal" allowscriptaccess="never" src="http://www.xiami.com/widget/828935_1771841046/singlePlayer.swf" quality="high" bgcolor="#ffffff" wmode="transparent" allowfullscreen="true" type="application/x-shockwave-flash"></span>
 <br>
 <hr class="l"><img src="http://zhixing.bjtu.edu.cn/static/image/hrline/5.gif" width="272" height="23"><img src="http://zhixing.bjtu.edu.cn/static/image/hrline/5.gif" width="272" height="23">
 <strong>专辑名</strong><font color="#000"><font face="Helvetica"><font style="font-size:13px">: </font></font></font><font face="Helvetica"><font size="2"><font color="#000000">Native</font></font></font><br>
@@ -308,7 +308,7 @@ title: 2013个人专辑推荐！2013 ALBUMS AWSOME MIX!
 16.What You Wanted<br>
 17.Burning Bridges<br>
 <br>
-<span id="swf_cS4"><embed width="257" height="33" allownetworking="internal" allowscriptaccess="never" src="http://www.xiami.com/widget/828935_1771714959/singlePlayer.swf" quality="high" bgcolor="#ffffff" wmode="transparent" allowfullscreen="true" type="application/x-shockwave-flash"></span><script type="text/javascript" reload="1">$('swf_cS4').innerHTML=AC_FL_RunContent('width', '257', 'height', '33', 'allowNetworking', 'internal', 'allowScriptAccess', 'never', 'src', encodeURI('http://www.xiami.com/widget/828935_1771714959/singlePlayer.swf'), 'quality', 'high', 'bgcolor', '#ffffff', 'wmode', 'transparent', 'allowfullscreen', 'true');</script><br>
+<span id="swf_cS4"><embed width="257" height="33" allownetworking="internal" allowscriptaccess="never" src="http://www.xiami.com/widget/828935_1771714959/singlePlayer.swf" quality="high" bgcolor="#ffffff" wmode="transparent" allowfullscreen="true" type="application/x-shockwave-flash"></span>
 <br>
 <hr class="l"><img src="http://zhixing.bjtu.edu.cn/static/image/hrline/5.gif" width="272" height="23"><img src="http://zhixing.bjtu.edu.cn/static/image/hrline/5.gif" width="272" height="23">
 </td></tr></tbody></table>
