--- a/_posts/2013-11-28-2013-Albums.md
+++ b/_posts/2013-11-28-2013-Albums.md
@@ -1,8 +1,8 @@
 ---
 layout: post
-title: 2013个人专辑推荐！2013 ALBUMS AWSOME MIX!
+title: 2013年度个人专辑推荐！2013 AWSOME Albums!
 ---
-<table cellspacing="0" cellpadding="0"><tbody><tr><td class="t_f" id="postmessage_8533481">
+<table cellspacing="0" cellpadding="0"><tbody><tr><td class="t_f" id="postmessage_8533481" style="font-size: 14px;line-height: 22px;">
 <div align="center"><p style="line-height:30px;text-indent:2em;text-align:left">
 </p><div class="mbn">
 
@@ -10,9 +10,7 @@ title: 2013个人专辑推荐！2013 ALBUMS AWSOME MIX!
 
 </div>
 
-
-
-<p></p></div><br>
+</div><br>
 <br>
 <div class="quote"><blockquote>嗨~小朋友们,大家好! 还记得我是谁吗? 对了! 我就是...(好像拿错稿子了！）<br>
 咳咳...<br>
